tests/run/error_match_nested.out
tests/run/error_match_nested.ig:9:19: error: nested enum patterns are not supported yet — bind the payload and use a nested `match`
